--- a/docs/docs/tutorials/get_started/add_memory.ipynb
+++ b/docs/docs/tutorials/get_started/add_memory.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e77261f3",
    "metadata": {
     "vscode": {
@@ -347,8 +347,8 @@
     "My motto is: \"Make the world better with data and models\". That’s why I work as an AI Solution Architect at FPT Software and as an AI lecturer at NEU.\n",
     "I began my journey as a gifted student in Mathematics at the High School for Gifted Students, VNU University, where I developed a deep passion for Math and Science.\n",
     "Later, I earned an Excellent Bachelor's Degree in Applied Mathematical Economics from NEU University in 2015. During my time there, I became the first student from the Math Department to win a bronze medal at the National Math Olympiad.\n",
-    "I have been working as an AI Solution Architect at FPT Software since 2021.\n",
-    "I have been teaching AI and ML courses at NEU university since 2022.\n",
+    "I have been working as an AI Solution Architect at FPT Software since 2024.\n",
+    "I have been teaching AI and ML courses at NEU university since 2025 as an Adjunct Lecturer.\n",
     "I have conducted extensive research on Reliable AI, Generative AI, and Knowledge Graphs at FPT AIC.\n",
     "I was one of the first individuals in Vietnam to win a paper award on the topic of Generative AI and LLMs at the Nvidia GTC Global Conference 2025 in San Jose, USA.\n",
     "I am the founder of DataScienceWorld.Kan, an AI learning hub offering high-standard AI/ML courses such as Build Generative AI Applications and MLOps – Machine Learning in Production, designed for anyone pursuing a career as an AI/ML engineer.\n",
