Present AI Guardrail system

--- a/docs/docs/tutorials/get_started/ai_guardrail.ipynb
+++ b/docs/docs/tutorials/get_started/ai_guardrail.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "17eea64b",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e5a7f320",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
    "source": [
     "from vinagent.oauth2.client import AuthenCard\n",
     "\n",
-    "authen_card = AuthenCard.from_config(\"/Users/phamdinhkhanh/Documents/Courses/Manus/vinagent/vinagent/oauth2/authen/secret.json\")\n",
+    "authen_card = AuthenCard.from_config(\"[Your_Direct_Authen_Path]/authen/secret.json\")\n",
     "authen_card.verify_access_token()"
    ]
   },
@@ -363,8 +363,7 @@
       "-------------------\n",
       "\n",
       "Hello, how are you?\n",
-      "HTTP error occurred: 401 Client Error: Unauthorized for url: http://localhost:8000/verify-token\n",
-      "allowed=False action='block' rewrite_prompt=None reason='Authentication failed' authentication=AuthenticationGuardrail(name='AuthenticationGuardrail', reason='Authentication failed', secret_path=None, access_token=None, api_url=None)\n"
+      "allowed=True action='allow' rewrite_prompt=None reason='Valid access token.' authentication=None\n"
      ]
     }
    ],
@@ -379,8 +378,8 @@
     "\n",
     "DecisionModel = GuardrailDecision.add_guardrails(\n",
     "    [\n",
-    "        AuthenticationGuardrail(secret_path=\"/Users/phamdinhkhanh/Documents/Courses/Manus/vinagent/vinagent/oauth2/authen/secret.json\"), # True case\n",
-    "        # AuthenticationGuardrail(access_token=\"abcxyz\", api_url=\"http://localhost:8000/verify-token\"), # False case \n",
+    "        AuthenticationGuardrail(secret_path=\"[Your_Direct_Authen_Path]/authen/secret.json\"), # True case\n",
+    "        # AuthenticationGuardrail(access_token=\"abcxyz\", api_url=\"http://localhost:8000/verify-token\"), # False case with incorrect access_token\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -412,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c5f3656a",
    "metadata": {},
    "outputs": [
@@ -439,7 +438,7 @@
     "    weather_tool:\n",
     "      - name: AuthenticationGuardrail\n",
     "        params:\n",
-    "          secret_path: \"/Users/phamdinhkhanh/Documents/Courses/Manus/vinagent/vinagent/oauth2/authen/secret.json\"\n",
+    "          secret_path: \"[Your_Direct_Authen_Path]/authen/secret.json\"\n",
     "    sql_tool:\n",
     "      - name: AuthenticationGuardrail\n",
     "        params:\n",
@@ -583,6 +582,14 @@
     "# Validate all tools\n",
     "tool_results = manager.validate_tools()\n",
     "print(tool_results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b062845c",
+   "metadata": {},
+   "source": [
+    "It validates all tools and realizes that `sql_tool` has an invalid access token whereas `weather_tool` accepted "
    ]
   },
   {
