Add ai_guardrail layer

--- a/docs/docs/tutorials/get_started/ai_guardrail.ipynb
+++ b/docs/docs/tutorials/get_started/ai_guardrail.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "17eea64b",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
     "from dotenv import load_dotenv, find_dotenv\n",
     "load_dotenv(find_dotenv('.env'))\n",
     "\n",
-    "llm = llm = ChatOpenAI(\n",
+    "llm = ChatOpenAI(\n",
     "    model=\"gpt-4o-mini\",\n",
     "    temperature=0.7\n",
     ")"
